# tactile-reader

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: sample_capture_schema.md
src/tactile_reader/: crop.py  crop_gui.py  visualize.py
