[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tactile-reader"
version = "0.1.0"
description = "Rerun-based visualizer and timeline cropper for tactile-glove + OAK capture datasets."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Zekai Chen", email = "zekai.chen@deepreach.ai" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=14",
    "pillow>=10",
    "rerun-sdk>=0.26",
]

[project.optional-dependencies]
gui = []  # Tkinter ships with cpython; nothing extra required

[project.urls]
Homepage = "https://github.com/zekai-chen-deepreach/tactile-reader"
Issues = "https://github.com/zekai-chen-deepreach/tactile-reader/issues"

[project.scripts]
tactile-reader-viz = "tactile_reader.visualize:main"
tactile-reader-crop = "tactile_reader.crop:main"
tactile-reader-crop-gui = "tactile_reader.crop_gui:main"

[tool.setuptools.packages.find]
where = ["src"]
